--- a/llm-servers/vllm/cpu/gitops/deployment.yaml
+++ b/llm-servers/vllm/cpu/gitops/deployment.yaml
@@ -50,7 +50,7 @@ spec:
             failureThreshold: 3
           env:
             - name: HUGGING_FACE_HUB_TOKEN
-              value: ''
+              value: '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'
           args: [
             "--model",
             "TinyLlama/TinyLlama-1.1B-Chat-v1.0",
