--- a/llm-servers/vllm/gpu/gitops/deployment.yaml
+++ b/llm-servers/vllm/gpu/gitops/deployment.yaml
@@ -50,10 +50,10 @@ spec:
             failureThreshold: 3
           env:
             - name: HUGGING_FACE_HUB_TOKEN
-              value: ''
+              value: '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'
           args: [
             "--model",
-            "mistralai/Mistral-7B-Instruct-v0.2",
+            "mistralai/Mistral-7B-Instruct-v0.3",
             "--download-dir",
             "/models-cache",
             "--dtype", "float16",
