--- a/llm-servers/vllm/gpu/gitops/deployment.yaml
+++ b/llm-servers/vllm/gpu/gitops/deployment.yaml
@@ -50,7 +50,7 @@ spec:
             failureThreshold: 3
           env:
             - name: HUGGING_FACE_HUB_TOKEN
-              value: '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'
+              value: ''
           args: [
             "--model",
             "mistralai/Mistral-7B-Instruct-v0.2",
